driver/tests/snap/type_error/const_object_in_meta/0_input.splic
code def answer: u32 = 42;
def meta_ref: u32 = answer;
